Add initial support for autogeneration of models from database. No specs for it yet.

--- a/TODO
+++ b/TODO
@@ -1,7 +1,8 @@
 - Think about unit of work
 - Helper to create model objects:
 
-model_from_database :Track
+R(Track).define_accessors
+Ribs::define_model :Track
 
 - Ribs should allow advanced functionality such as Unit of Work, Repository, Data Mapper, but also scale down to Active Record level
 - Add logging
